--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,9 @@ html, body{
   width: 100%;
 }
 #camera, #cam-view, #cam-in, #cam-out{
+  /* filter: grey; */
+  /* -webkit-filter: grayscale(1); */
+  /* filter: grayscale(1); */
   position: fixed;
   height: 100%;
   width: 100%;
@@ -57,6 +60,25 @@ html, body{
   top: 0px;
   left: 0px;
 }
+#sample-view, #sample-in, #sample-out{
+  position: absolute;
+  filter: grey;
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+  height: 28px!important;
+  width: 28px!important;
+  top: 160px;
+  right: 30px;
+  z-index: 2;
+}
+/* #sample-in { */
+  /* position: absolute; */
+  /* height: 28px!important; */
+  /* width: 28px!important; */
+  /* top: 160px; */
+  /* right: 30px; */
+  /* /* z-index: 2; */ 
+/* } */
 .taken{
   height: 100px!important;
   width: 100px!important;
