--- a/public/style.css
+++ b/public/style.css
@@ -3,13 +3,14 @@ html, body{
   padding: 0;
   height: 100%;
   width: 100%;
+  background-color: grey;
 }
 #camera, #cam-view, #cam-in, #cam-out{
   /* filter: grey; */
   /* -webkit-filter: grayscale(1); */
   /* filter: grayscale(1); */
   position: fixed;
-  height: 100%;
+  height: 70%;
   width: 100%;
   object-fit: cover;
 }
@@ -26,12 +27,13 @@ html, body{
   color: white;
   font-size: 14px;
   border-radius: 20px;
-  border: none;
+  border-width: 2px;
+  border-color: white;
   padding: 14px 7px;
   text-align: center;
   box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
   position: fixed;
-  bottom: 30px;
+  bottom: 160px;
   left: calc(28% - 50px);
 }
 #observe{
@@ -40,14 +42,28 @@ html, body{
   color: white;
   font-size: 14px;
   border-radius: 20px;
-  border: none;
+  border-width: 2px;
+  border-color: white;
   padding: 14px 7px;
   text-align: center;
   box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
   position: fixed;
-  bottom: 30px;
+  bottom: 160px;
   left: calc(72% - 50px);
 } 
+
+#sample-view, #sample-in, #sample-out{
+  position: absolute;
+  filter: grey;
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+  height: 28px!important;
+  width: 28px!important;
+  top: 160px;
+  right: 30px;
+  z-index: 2;
+}
+
 #location{
   width: 100%;
   background-color: black;
@@ -60,16 +76,50 @@ html, body{
   top: 0px;
   left: 0px;
 }
-#sample-view, #sample-in, #sample-out{
-  position: absolute;
-  filter: grey;
-  -webkit-filter: grayscale(1);
-  filter: grayscale(1);
-  height: 28px!important;
-  width: 28px!important;
-  top: 160px;
-  right: 30px;
-  z-index: 2;
+
+#info-view {
+  width: 100%;
+  width: 100vw;
+  background-color: black;
+  height: 25%;
+  color: white;
+  font-size: 16px;
+  padding: 0px 50px 5px 20px;
+  text-align: left;
+  position: fixed;
+  bottom: 0px;
+  z-index: 3;
+  overflow-x: hidden;
+  overflow-y: auto;
+  
+  /* -webkit-transition: all 1000ms ease; */
+	/* -moz-transition: all 1000ms ease; */
+  /* -ms-transition: all 1000ms ease; */
+  /* -o-transition: all 1000ms ease; */
+	/* transition: all 1000ms ease; */
+}
+
+#data-categories {
+  list-style-type: none;
+  width: 100%;
+  padding: 0px;
+  margin: 0px:
+}
+
+#data-categories li {
+  display: inline;
+  padding-right: 3px;
+  padding-left: 3px;
+  border-right: 1px solid white;
+  /* border-left: 1px solid white; */
+}
+
+#data-categories li:first-child {
+  border-left: 1px solid white;
+}
+
+#info-out {
+padding-right: 30px;
 }
 
 .taken{
@@ -94,19 +144,6 @@ html, body{
   /* /* z-index: 2; */ 
 /* } */
 
-/* #info-view { */
-  /* width: 100% */
-  /* height: 30%; */
-  /* position: fixed; */
-  /* bottom: 60px; */
-  /* z-index: 10; */
-  /* background: white; */
-  /* -webkit-transition: all 1000ms ease; */
-	/* -moz-transition: all 1000ms ease; */
-  /* -ms-transition: all 1000ms ease; */
-  /* -o-transition: all 1000ms ease; */
-	/* transition: all 1000ms ease; */
-/* } */
 /* #info-view: hover { */
   /* bottom: 0px; */
   /* -webkit-transition: all 1000ms ease; */
@@ -115,15 +152,5 @@ html, body{
   /* -o-transition: all 1000ms ease; */
   /* transition: all 1000ms ease; */
 /* } */
-/* #container { */
-/* position:relative; */
-/* width:900px; */
-/* margin-left:auto; */
-/* margin-right: auto; */
-/* } */
-/* #container ul { */
-/* width:290px; */
-/* float:left; */
-/* color:FFF; */
-/* } */
+
 
